# Proyecto2.0

Project/: LInkscribe.pptm  docker-compose.yml
Project/backend/: Dockerfile.txt  database.py  link.db  link_scribe_router.py  links.db  main.py  models.py  pyproject.toml  requirements.txt  test.db
Project/frontend/: Dockerfile.txt  app.py  pyproject.toml  requirements.txt
Project/modelo/: models.ipynb
Project/modelo/model_secondary_category/: model_secondary_category.pkl
