[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Julian Carvajal <julian_dav.carvajal@uao.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
scikit-learn = "^1.5.2"
python-multipart = "^0.0.12"
pillow = "^10.4.0"
tensorflow = "^2.17.0"
typing-inspect = "^0.9.0"
pydantic = "^2.9.2"
fastapi-restful = "^0.6.0"
sqlalchemy = "^2.0.35"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.0"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
